# superqt

./: .coveragerc  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _macros.py  codecov.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test.py  tox.ini  x.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: test_and_deploy.yml
docs/: RangeSlider.md  _macros.py  combobox.md  decorators.md  faq.md  index.md  listwidgets.md  sliders.md  utils.md
docs/utilities/: cmap.md  code_syntax_highlight.md  error_dialog_contexts.md  fonticon.md  iconify.md  index.md  qmessagehandler.md  signal_utils.md  thread_decorators.md  threading.md  throttling.md
docs/widgets/: colormap_catalog.md  index.md  qcollapsible.md  qcolorcombobox.md  qcolormap.md  qdoublerangeslider.md  qdoubleslider.md  qelidinglabel.md  qenumcombobox.md  qflowlayout.md  qlabeleddoublerangeslider.md  qlabeleddoubleslider.md  qlabeledrangeslider.md  qlabeledslider.md  qlargeintspinbox.md  qquantity.md  qrangeslider.md  qsearchablecombobox.md  qsearchablelistwidget.md  qsearchabletreewidget.md  qtoggleswitch.md
examples/: basic.py  basic_float.py  check_combobox.py  code_highlight.py  collapsible.py  color_combo_box.py  colormap_combo_box.py  demo_widget.py  demo_widget2.py  double_slider.py  eliding_label.py  float.py  flow_layout.py  fonticon.py  fonticon1.py  fonticon2.py  fonticon3.py  generic.py  icon_explorer.py  iconify.py  labeled.py  labeled_sliders.py  multihandle.py  napari_icons.py  qcollapsible.py  quantity.py  range_slider.py  screenshots.py  searchable_combo_box.py  searchable_list_widget.py  searchable_tree_widget.py  throttle_mouse_event.py  throttler_demo.py  toggle_switch.py
faq/: index.html
pyqrangeslider/: __init__.py  _qrangeslider.py
pyqrangeslider/_tests/: test_slider.py
pyqrangeslider/qtcompat/: QtCore.py  QtGui.py  QtWidgets.py  __init__.py
qt_extras/: __init__.py
qt_extras/qtcompat/: __init__.py
qt_extras/sliders/: __init__.py  _labeled.py
qt_extras/sliders/_tests/: _testutil.py  test_float.py  test_generic_slider.py  test_range_slider.py  test_single_value_sliders.py  test_slider.py
qt_extras/spinbox/_tests/: test_large_int_spinbox.py
qtrangeslider/: __init__.py  _float_slider.py  _generic_range_slider.py  _generic_slider.py  _hooked.py  _labeled.py  _qrangeslider.py  _range_style.py  _sliders.py  _style.py
qtrangeslider/_tests/: _testutil.py  test_float.py  test_generic_slider.py  test_range_slider.py  test_single_value_sliders.py  test_slider.py
qtrangeslider/qtcompat/: QtGui.py  QtWidgets.py  __init__.py
qwidgets/: __init__.py
qwidgets/qtcompat/: __init__.py
qwidgets/sliders/: _range_style.py
qwidgets/spinbox/: __init__.py
qwidgets/spinbox/_tests/: test_large_int_spinbox.py
search/: search_index.json
src/: collapsible.py
src/superqt/: __init__.py  _eliding_label.py  _pytest_plugin.py  _version.py
src/superqt/cmap/: __init__.py  _catalog_combo.py  _cmap_combo.py  _cmap_filter_combo.py  _cmap_item_delegate.py  _cmap_line_edit.py  _cmap_utils.py
superqt/: __init__.py  _eliding_label.py  _label.py
superqt/_tests/: test_eliding_label.py
superqt/combobox/: __init__.py  _enum_combobox.py
superqt/compound/: _quantity.py
superqt/containers/: __init__.py  evented_list.py  typed.py
superqt/fonticon/: __init__.py  _animations.py  _font_enum.py  _iconfont.py  _plugins.py  _qfont_icon.py  _utils.py
superqt/qtcompat/: QtCore.py  QtGui.py  QtSvg.py  QtWidgets.py  __init__.py  __init__.pyi  _gen.py
superqt/signal/: __init__.py  _signal.py
superqt/sliders/: __init__.pyi  _generic_slider.py  _labeled.py  _range_style.py
superqt/spinbox/: _intspin.py
superqt/utils/: __init__.py  _ensure_thread.py  _ensure_thread.pyi  _qthreading.py
tests/: conftest.py  test_check_combobox.py  test_cmap.py  test_code_highlight.py  test_collapsible.py  test_color_combo.py  test_colormap_combo.py  test_dataframeeditor.py  test_eliding_label.py  test_eliding_line_edit.py  test_ensure_thread.py  test_enum_comb_box.py  test_flow_layout.py  test_iconify.py  test_large_int_spinbox.py  test_qmessage_handler.py  test_quantity.py  test_searchable_combobox.py  test_searchable_list.py  test_searchable_tree.py  test_threadworker.py  test_throttler.py  test_toggle_switch.py  test_utils.py
tests/test_fonticon/: test_collapsible.py  test_fonticon.py  test_plugins.py
tests/test_sliders/: _testutil.py  test_float.py  test_generic_slider.py  test_labeled_slider.py  test_range_slider.py  test_single_value_sliders.py  test_slider.py
tests/zz_test_sliders/: test_float.py  test_generic_slider.py  test_labeled_slider.py  test_range_slider.py  test_single_value_sliders.py
tmp/: sliders.md
utilities/: index.html
utilities/cmap/: index.html
utilities/code_syntax_highlight/: index.html
utilities/error_dialog_contexts/: index.html
utilities/fonticon/: index.html
utilities/iconify/: index.html
utilities/qmessagehandler/: index.html
utilities/signal_utils/: index.html
utilities/thread_decorators/: index.html
utilities/threading/: index.html
utilities/throttling/: index.html
widgets/: index.html
widgets/colormap_catalog/: index.html
widgets/qcollapsible/: index.html
widgets/qcolorcombobox/: index.html
widgets/qcolormap/: index.html
widgets/qdoublerangeslider/: index.html
widgets/qdoubleslider/: index.html
widgets/qelidinglabel/: index.html
widgets/qenumcombobox/: index.html
widgets/qflowlayout/: index.html
widgets/qlabeleddoublerangeslider/: index.html
widgets/qlabeleddoubleslider/: index.html
widgets/qlabeledrangeslider/: index.html
widgets/qlabeledslider/: index.html
widgets/qlargeintspinbox/: index.html
widgets/qquantity/: index.html
widgets/qrangeslider/: index.html
widgets/qsearchablecombobox/: index.html
widgets/qsearchablelistwidget/: index.html
widgets/qsearchabletreewidget/: index.html
widgets/qtoggleswitch/: index.html
(+129 files in other folders)
