[metadata]
name = QtRangeSlider
url = https://github.com/tlambert03/QtRangeSlider
license = BSD-3
license_file = LICENSE
description = Multi-handle range slider widget for PyQt/PySide
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Talley Lambert
author_email = talley.lambert@gmail.com
keywords = qt, range slider, widget
project_urls =
    Source = https://github.com/tlambert03/QtRangeSlider
    Tracker = https://github.com/tlambert03/QtRangeSlider/issues
    Changelog = https://github.com/tlambert03/QtRangeSlider/blob/master/CHANGELOG.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Desktop Environment
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm

[options.extras_require]
pyside2 = pyside2
pyqt5 = pyqt5
pyside6 = pyside6
pyqt6 = pyqt6
testing =
    tox
    tox-conda
    pytest
    pytest-qt
    pytest-cov
dev =
    ipython
    jedi<0.18.0
    isort
    mypy
    pre-commit
    %(testing)s
    %(pyqt5)s

[flake8]
exclude = _version.py,.eggs,examples
docstring-convention = numpy
ignore = E203,W503,E501,C901,F403,F405

[isort]
profile=black

[tool:pytest]
addopts = -W error
