[metadata]
name = superqt
description = Missing widgets for PyQt/PySide
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/napari/superqt
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Desktop Environment
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
keywords = qt, range slider, widget
project_urls =
    Source = https://github.com/napari/superqt
    Tracker = https://github.com/napari/superqt/issues
    Changelog = https://github.com/napari/superqt/blob/master/CHANGELOG.md

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pyside2
    pytest
    pytest-cov
    pytest-qt
    tox
    tox-conda
pyqt5 =
    pyqt5
pyqt6 =
    pyqt6
pyside2 =
    pyside2
pyside6 =
    pyside6
testing =
    pytest
    pytest-cov
    pytest-qt
    tox
    tox-conda

[options.package_data]
superqt = py.typed

[flake8]
exclude = _version.py,.eggs,examples
docstring-convention = numpy
ignore = E203,W503,E501,C901,F403,F405,D100

[pydocstyle]
convention = numpy
add_select = D402,D415,D417
ignore = D100

[isort]
profile = black

[tool:pytest]
addopts = -W error
